[package]
name = "tcx-proto"
version.workspace = true
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "=0.11.2"
bytes = "=1.4.0"
prost-types = "=0.11.2"

[lib]
name = "tcx_proto"
build = "build.rs"


[build-dependencies]
prost-build = "=0.11.4"
