[package]
name = "tcx-tester"
version.workspace = true
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "=0.4.3"
tcx = { path = "../tcx" }
prost = "=0.11.2"
bytes = "=1.4.0"
